package edu.austral.ingsis.math;

public class Multiplication {
}
