package edu.austral.ingsis.math;

public class VarValue {
}
